# demo-seattle-weather

./: README.md  auth.py  config.py  df_gc_clean.pkl  notebook.ipynb  pyproject.toml  requirements.txt  scaler.pkl  smart_energy_model.pkl  streamlit_app.py  streamlit_app_2.py  supabase_http.py  tariffs.py  utils.py  weather.py
pages/: AI_model.py  dashboard.py  data_analysis.py  history.py
