[project]
name = "smart-energy-advisor"
version = "1.0.0"
description = "Dashboard para análise e previsão de consumo energético agregado de 300 clientes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.48.1",
    "pandas>=2.3.1",
    "numpy>=2.0.0",
    "plotly>=5.24.0",
    "requests>=2.32.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
]
