[project]
name = "smart-energy-advisor"
version = "1.0.0"
description = "Dashboard inteligente de gestão de energia com previsão de consumo por XGBoost, produção solar e simulação tarifária."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.45.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "requests>=2.32.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "supabase>=2.4.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Repository = "https://github.com/maripoli09/demo-seattle-weather"